Версия 1.1. - Добавлена подпись (кто является автором заметки). Версия 1.2. - заменен шаблонизатор с mustache на freemaker (но отвалилось обновление 1.1. и при регистрации нового пользователя не пишет что логин занят)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/notebook_db
 spring.datasource.username=root
 spring.datasource.password=276
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
